--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,25 +6,33 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #1C9FFF;
-  --ifm-color-primary-dark: #00B2EE;
-  --ifm-color-primary-darker: #0099CC;
-  --ifm-color-primary-darkest: #00688B;
-  --ifm-color-primary-light: #41CFFF;
-  --ifm-color-primary-lighter: #93E4FF;
-  --ifm-color-primary-lightest: #E5F9FF;
+  --ifm-color-primary: #0f578a;
+  --ifm-color-primary-dark: #0d4e7c;
+  --ifm-color-primary-darker: #0d4a75;
+  --ifm-color-primary-darkest: #0a3d61;
+  --ifm-color-primary-light: #106098;
+  --ifm-color-primary-lighter: #11649f;
+  --ifm-color-primary-lightest: #1371b3;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #1C9FFF;
-  --ifm-color-primary-dark: #00B2EE;
-  --ifm-color-primary-darker: #0099CC;
-  --ifm-color-primary-darkest: #00688B;
-  --ifm-color-primary-light: #41CFFF;
-  --ifm-color-primary-lighter: #93E4FF;
-  --ifm-color-primary-lightest: #E5F9FF;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --ifm-color-primary: #57b9ff;
+  --ifm-color-primary-dark: #35abff;
+  --ifm-color-primary-darker: #24a4ff;
+  --ifm-color-primary-darkest: #008cef;
+  --ifm-color-primary-light: #79c7ff;
+  --ifm-color-primary-lighter: #8aceff;
+  --ifm-color-primary-lightest: #bee4ff;
+}
+
+p.text--truncate {
+  white-space: normal;
+  overflow: visible;
+}
+
+.iconExternalLink_node_modules-\@docusaurus-theme-classic-lib-theme-Icon-ExternalLink-styles-module {
+  display: none;
 }
